--- a/index.html
+++ b/index.html
@@ -420,7 +420,7 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
-            <div class="icon flex-shrink-0"><i class="bi bi-briefcase"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-phone-flip"></i></div>
             <div>
               <h4 class="title"><a href="service-details.html" class="stretched-link">Mobile App Development</a></h4>
               <p class="description">Cross-platform (Flutter, React Native)</p>
@@ -431,7 +431,7 @@
           <!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
-            <div class="icon flex-shrink-0"><i class="bi bi-card-checklist"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-browser-chrome"></i></div>
             <div>
               <h4 class="title"><a href="service-details.html" class="stretched-link">Web Development</a></h4>
               <p class="description">Frontend & Backend</p>
@@ -441,7 +441,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
-            <div class="icon flex-shrink-0"><i class="bi bi-bar-chart"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-joystick"></i></div>
             <div>
               <h4 class="title"><a href="service-details.html" class="stretched-link">Game Development</a></h4>
               <p class="description">2D & 3D game development</p>
@@ -452,7 +452,7 @@
           </div><!-- End Service Item -->
 
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
-            <div class="icon flex-shrink-0"><i class="bi bi-brightness-high"></i></div>
+            <div class="icon flex-shrink-0"><i class="bi bi-shop-window"></i></div>
             <div>
               <h4 class="title"><a href="service-details.html" class="stretched-link">E-Commerce & SaaS Solutions</a></h4>
               <p class="description">Shopify / WooCommerce integrations</p>
