--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="icon flex-shrink-0"><i class="bi bi-phone-flip"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Mobile App Development</a></h4>
+              <h4 class="title">Mobile App Development</a></h4>
               <p class="description">Cross-platform (Flutter, React Native)</p>
               <p class="description">Native iOS and Android</p>
               <p class="description">App Store / Play Store deployment</p>
@@ -433,7 +433,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="200">
             <div class="icon flex-shrink-0"><i class="bi bi-browser-chrome"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Web Development</a></h4>
+              <h4 class="title">Web Development</a></h4>
               <p class="description">Frontend & Backend</p>
               <p class="description">Landing pages & Web apps</p>
               <p class="description">CMS Integration (WordPress, Headless CMS)</p>
@@ -443,7 +443,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="300">
             <div class="icon flex-shrink-0"><i class="bi bi-joystick"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">Game Development</a></h4>
+              <h4 class="title">Game Development</a></h4>
               <p class="description">2D & 3D game development</p>
               <p class="description">Unity & Godot engines</p>
               <p class="description">Mobile, PC, and Web platforms</p>
@@ -454,7 +454,7 @@
           <div class="col-lg-4 col-md-6 service-item d-flex" data-aos="fade-up" data-aos-delay="500">
             <div class="icon flex-shrink-0"><i class="bi bi-shop-window"></i></div>
             <div>
-              <h4 class="title"><a href="service-details.html" class="stretched-link">E-Commerce & SaaS Solutions</a></h4>
+              <h4 class="title">E-Commerce & SaaS Solutions</a></h4>
               <p class="description">Shopify / WooCommerce integrations</p>
               <p class="description">Custom dashboard tools</p>
             </div>
